# final-project

./: CMakeLists.txt  Copilot.cpp  Copilot.h  Final_Project.h  Initialization of Classes  Logo.cpp  Pilot.cpp  Pilot.h  Plane.h  Racing_Game.cpp  Racing_Game.h  ReadMe.txt  SDL  visualization and race logic  circle code.cpp  date_time.h  logo.h  logo.txt  main  main.cpp
main.dSYM/Contents/Resources/DWARF/: main
